# stado

./: .clang-tidy  License  Makefile  ReadMe.md  meson.build  meson_options.txt  subprojects.txt
benchmark/: cvt-mask.cpp  cvt128-u32-f64.cpp  cvt256-u16-u64.cpp  cvt256-u64-i64.cpp  extend-lookup-mean.cpp  extract-16.cpp  extract-8.cpp  gather-mask-u32x4.cpp  gather-u32.cpp  gather-u32x4.cpp  gather-u32x8.cpp  generate_random.hpp  index.cpp  lookup.cpp  meson.build  part-load-f32.cpp  part-load-f64.cpp  part-mask.cpp  part-store-16.cpp  part-store-32.cpp  part-store-64.cpp  part-store-8.cpp
include/stado/: defs.hpp  instruction-set.hpp  mask.hpp  stado.hpp  vector.hpp
include/stado/mask/: base.hpp  broad.hpp  compact.hpp  concepts.hpp  operations.hpp  single.hpp  subnative.hpp
include/stado/mask/broad/: 08x16.hpp  08x32.hpp  16x08.hpp  16x16.hpp  16x8.hpp  32x04.hpp  32x08.hpp  32x4.hpp  32x8.hpp  64x02.hpp  64x04.hpp  64x2.hpp  64x4.hpp  base.hpp  mask-16-16.hpp  mask-16-8.hpp  mask-32-4.hpp  mask-32-8.hpp  mask-64-2.hpp  mask-64-4.hpp  mask-8-16.hpp  mask-8-32.hpp
include/stado/mask/compact/: 02.hpp  04.hpp  08.hpp  16.hpp  32.hpp  64.hpp  base.hpp  mask-16.hpp  mask-2.hpp  mask-32.hpp  mask-4.hpp  mask-64.hpp  mask-8.hpp  operations.hpp
include/stado/mask/operations/: convert-elements.hpp  horizontal.hpp  lookup-masked.hpp  part-mask.hpp
include/stado/vector/: base.hpp  concepts.hpp  native.hpp  operations.hpp  single.hpp  subnative.hpp  supernative.hpp
include/stado/vector/native/: base.hpp  divisor.hpp  operations.hpp  sizes.hpp  types.hpp
include/stado/vector/native/operations/: 128f.hpp  128i.hpp  256f.hpp  256i.hpp  512bw.hpp  512f.hpp  512i.hpp  f32x04.hpp  f32x08.hpp  f32x16.hpp  f32x4.hpp  f32x8.hpp  f64x02.hpp  f64x04.hpp  f64x08.hpp  f64x2.hpp  f64x4.hpp  f64x8.hpp  i08x16.hpp  i08x32.hpp  i08x64.hpp  i16x08.hpp  i16x16.hpp  i16x32.hpp  i16x8.hpp  i32x04.hpp  i32x08.hpp  i32x16.hpp  i32x4.hpp  i32x8.hpp  i64x02.hpp  i64x04.hpp  i64x08.hpp  i64x2.hpp  i64x4.hpp  i64x8.hpp  i8x16.hpp  i8x32.hpp  i8x64.hpp  u08x16.hpp  (+20 more)
include/stado/vector/native/types/: base-128.hpp  base-256.hpp  base-512.hpp  f32x04.hpp  f32x08.hpp  f32x16.hpp  f32x4.hpp  f32x8.hpp  f64x02.hpp  f64x04.hpp  f64x08.hpp  f64x2.hpp  f64x4.hpp  f64x8.hpp  i08x16.hpp  i08x32.hpp  i08x64.hpp  i16x08.hpp  i16x16.hpp  i16x32.hpp  i16x8.hpp  i32x04.hpp  i32x08.hpp  i32x16.hpp  i32x4.hpp  i32x8.hpp  i64x02.hpp  i64x04.hpp  i64x08.hpp  i64x2.hpp  i64x4.hpp  i64x8.hpp  i8x16.hpp  i8x32.hpp  i8x64.hpp
include/stado/vector/operations/: convert-elements.hpp  from-ptr.hpp  lookup-masked.hpp  lookup-part.hpp  shuffle.hpp
subprojects/: .gitignore
test/: base.cpp  bench-extend-lookup.cpp  bench-extend.cpp  extend-lookup.cpp  extract-print.cpp  generate_random.hpp  meson.build
